2014-07-18  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/openvas-manage-certs.sh: Redirect both stdout and stderr of
	certtool invocation to log file since certtool sometimes prints error
	messages to stdout.

2014-07-17  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* tools/greenbone-nvt-sync: Added handling of "--help".

2014-07-17  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/openvas-manage-certs.sh: Check exit status of certtool and
	exit early if things went wrong.

2014-07-17  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/openvas-manage-certs.sh: Add missing comment. Only remove
	generation directory if the files were already copied somewhere else.

2014-07-17  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/openvas-manage-certs.sh: Add support for setting key size and
	signing algorithm. Document new settings in help. Actually append to
	log.

2014-07-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* tools/openvas-manage-certs.sh: Make cleanup depend on
	Debug mode.
	
2014-07-16  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/openvas-manage-certs.sh: Initial revision of new certificate
	management script.

2014-07-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/nasl_plugins.c (nasl_thread_args): New struct.
	(nasl_thread): Take a nasl_thread_args pointer as function argument.
	(nasl_plugin_launch): Adjust function call accordingly.

2014-07-11  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (attack_start): Don't attempt to randomly close all
	possibly open file descriptors. Close parent_socket.

	* src/nasl_plugins.c (nasl_thread): Reset kb link as this function is
	called in forked process. Don't attempt to close all possibly open file
	descriptors.
	(scanner_thread): Add socket fd to globals.

2014-07-10  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (attack_start_args): Add parent_socket element.